--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,74 @@
+* {
+  padding:0;
+  margin:0;
+}
+body{
+	margin: 0px 2%;
+	font-family: "Raleway";
+}
+
 h1{
+  margin-top: 20px;
   text-align: center;
-  color: red;
+  color: black;
 }
 div{
   background: gray;
+  float: left;
+  margin: 2%;
+  box-sizing: border-box;
+  position: relative;
+  border: 2px solid black;
+}
+
+p{
+	  padding: 20px 20px 20px 20px;
+	  clear: right;
+}
+
+.section{
+	margin: 0;
+	border: 2px solid black;
+	position: relative;
+	float: right;
+	padding: 0px 5px;
+}
+
+.beef h1{
+	background: yellow;
+	color: black;
+}
+
+.chicken h1{
+	background: red;
+	color: white;
+}
+.sushi h1{
+	background: lightpink;
+	color: black;
+}
+
+@media (min-width: 992px) {
+.beef, .chicken, .sushi{
+  width: 29.3%;
+}
+
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+	.beef, .chicken{
+  width: 46%;
+}
+
+  .sushi{
+  	width: 96%;
+}
+
+}
+
+@media (max-width: 767px) {
+	.beef, .chicken, .sushi{
+  width: 96%;
+}
+
 }
